--- a/src/app/shared/components/login/login.component.html
+++ b/src/app/shared/components/login/login.component.html
@@ -32,6 +32,7 @@
                                         [separateDialCode]="separateDialCode"
                                         name="phone"
                                         formControlName="phone"
+                                        
                                         customPlaceholder = "123 456 7891"
                                         >
                                         
@@ -50,6 +51,7 @@
                                             Loading...
                                         </span>
                                     </button>
+                                    <p>The value of id is {{ "ana1" }}</p>
                                 </form>
                                 <div *ngIf="haveOTP">
                                     <p style="text-align: center;font-size: 18px;margin-bottom: 30px;">{{'signIn.Enter the OTP sent to' | translate}} <b
@@ -64,6 +66,7 @@
                                         <p> {{'signIn.Did ont receive any code' | translate}}</p>
                                         <span (click)="resendOtp()">{{'signIn.Re-send code' | translate}}</span>
                                     </div>
+                                    <p>The value of id is {{ "ana2" }}</p>
                                 </div>
                                 <form #f="ngForm" *ngIf="!haveOTP && registrationRequest" [formGroup]="phoneForm">
                                     <div>
@@ -103,7 +106,9 @@
                                             Loading...
                                         </span>
                                     </button>
+                                    <p>The value of id is {{ "ana3" }}</p>
                                 </form>
+                                
                             </div>
 
                         </div>
