--- a/src/app/shared/components/results/results.component.html
+++ b/src/app/shared/components/results/results.component.html
@@ -44,35 +44,57 @@
                             <div class="col-md-12">
                                 <div class="card-body" style="cursor: pointer;" (click)="navigateToItemDetails(item)">
                                     <div class="row">
-                                        <div class="col-8">
-                                            <h5 class="card-title">
-                                                {{'propertyDetails.EGP' | translate}}
-                                                <br>{{ numberWithCommas(item['price'])}}
-                                            </h5>
-                                            <span class="location">
-                                                <img src="../../../../assets/images/noun_Location_1911856@2x.png" alt="..."/>
-                                                {{activeLang === 'en' ? item['area_name_en'] : item['area_name_ar']}}
-                                            </span>
-                                        </div>
-                                        <div class="col-4 float-end" style="position: relative;">
-                                            <nz-progress class="float-end" nzType="circle"
-                                                [nzPercent]="getScore(item['score'])"
-                                                [nzStrokeColor]="{ '0%': '#EC6666','50%':'#C175E8','70%':'#79D2DE', '100%': '#147AD6' }">
-                                            </nz-progress>
-                                            <span class="score">{{getScore(item['score'])}}%</span>
+                                        <div class="col-12">
+
+                                                
+                                                    
+                                                    <div class="col-4 float-end" style="position: relative;    transform: translate(10px, -56px);">
+                                                        <nz-progress class="float-end" nzType="circle" style="background: radial-gradient(circle at center, #f7f7f7 0%,#fbfbfb 47%,#ffffff 47%,#23bc2b00 47%,#23bc2b05 48%);"
+                                                            [nzPercent]="getScore(item['score'])"
+                                                            [nzStrokeColor]="{ '0%': '#ef8169','50%':'#288bd8','70%':'#ad8ee5', '100%': '#ea666b' }">
+                                                        </nz-progress>
+                                                        <span class="score">{{getScore(item['score'])}}%</span>
+                                                        <span class="score1"> Matching</span>
+                                                    </div>
+                                                <h6>
+                                                    {{ item['title'] }}
+                                                </h6>
+                                                
+                                                <h5 class="card-title">
+                                                    {{'propertyDetails.EGP' | translate}}
+                                                    {{ numberWithCommas(item['price'])}}
+                                                </h5>
+                                                <div class="space-between">
+
+                                                    <span class="location">
+                                                        <img src="../../../../assets/images/noun_Location_1911856@2x.png"
+                                                            alt="..." />
+                                                        {{activeLang === 'en' ? item['area_name_en'] : item['area_name_ar']}}
+                                                    </span>
+    
+    
+                                                    <span class="date">
+                                                        <img src="../../../../assets/images/date.png"
+                                                            alt="..." />
+                                                            {{ setDate(item['created_at']) }}
+                                                    </span>
+    
+                                                </div>
+                                        
+
                                         </div>
 
-                                    </div>
-                                    <div class="card-text">
-                                        <div class="row">
-                                            <div class="col-6 desc" *ngFor="let c of item['criteria'] | slice:0:4">
-                                                <img class="img-icon" src="{{getCriteriaImageSrc(c)}}" alt=".." />
-                                                {{getCriteriaOptions(c)}}
-                                            </div>
-                                        </div>
-                                    </div>
+                                        
                                     <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
                                 </div>
+                                <div class="card-text">
+                                    <div class="space-between">
+                                        <div class="desc" *ngFor="let c of item['criteria'] | slice:0:4">
+                                            <img class="img-icon" src="{{getCriteriaImageSrc(c)}}" alt=".." />
+                                            {{getCriteriaOptions(c)}}
+                                        </div>
+                                    </div>
+                                 </div>
                             </div>
                         </div>
                     </div>
