--- a/src/app/shared/components/login/login.component.html
+++ b/src/app/shared/components/login/login.component.html
@@ -51,7 +51,7 @@
                                             Loading...
                                         </span>
                                     </button>
-                                    <p>The value of id is {{ "ana1" }}</p>
+                                    <!-- <p>The value of id is {{ "ana1" }}</p> -->
                                 </form>
                                 <div *ngIf="haveOTP">
                                     <p style="text-align: center;font-size: 18px;margin-bottom: 30px;">{{'signIn.Enter the OTP sent to' | translate}} <b
@@ -66,7 +66,7 @@
                                         <p> {{'signIn.Did ont receive any code' | translate}}</p>
                                         <span (click)="resendOtp()">{{'signIn.Re-send code' | translate}}</span>
                                     </div>
-                                    <p>The value of id is {{ "ana2" }}</p>
+                                    <!-- <p>The value of id is {{ "ana2" }}</p> -->
                                 </div>
                                 <form #f="ngForm" *ngIf="!haveOTP && registrationRequest" [formGroup]="phoneForm">
                                     <div>
@@ -106,7 +106,7 @@
                                             Loading...
                                         </span>
                                     </button>
-                                    <p>The value of id is {{ "ana3" }}</p>
+                                    <!-- <p>The value of id is {{ "ana3" }}</p> -->
                                 </form>
                                 
                             </div>
