--- a/src/app/shared/components/results/results.component.scss
+++ b/src/app/shared/components/results/results.component.scss
@@ -133,6 +133,7 @@
                 }
         
                 .space-between{
+                    width: 100%;
                     display: flex;
                     justify-content: space-between;
                 }
@@ -167,8 +168,8 @@
         
                 .score {
                     position: absolute;
-                    right: 40px;
-                    top: 20px;
+                    right: 36%;
+                    top: 20%;
         
                     @media (max-width: 320px) {
                         right: 17%;
@@ -194,42 +195,53 @@
                         right: 34%;
                     }
                     }
-                    .score1 {
-                        position: absolute;
-                        right: 40px;
-                        top: 38px;
-                        font-size: x-small;
-            
-                        @media (max-width: 320px) {
-                            right: 17%;
-                        }
-            
-                        @media (max-width: 375px) {
-                            right: 32%;
-                        }
-            
-                        @media (max-width: 425px) {
-                            right: 32%;
-                        }
-            
-                        @media (max-width: 768px) {
-                            right: 41%;
-                        }
-            
-                        @media (max-width: 1024px) {
-                            right: 7%;
-                        }
-            
-                        @media (max-width: 1440px) {
-                            right: 24%;
-                        }
-                        }
+                .score1 {
+                    position: absolute;
+                    right: 31%;
+                    top: 50%;
+                    font-size: x-small;
         
-                 .space-between{
+                    @media (max-width: 320px) {
+                        right: 17%;
+                    }
+        
+                    @media (max-width: 375px) {
+                        right: 32%;
+                    }
+        
+                    @media (max-width: 425px) {
+                        right: 32%;
+                    }
+        
+                    @media (max-width: 768px) {
+                        right: 41%;
+                    }
+        
+                    @media (max-width: 1024px) {
+                        right: 7%;
+                    }
+        
+                    @media (max-width: 1440px) {
+                        right: 28%;
+                    }
+                    }
+        
+                .space-between{
+                    width: 100%;
                     display: flex;
                     justify-content: space-between;
-                    }
+                }
                  }
+
+                 &:hover {
+                    cursor: pointer;
+                    .card-title {
+                        color: #f55441;
+                    }
+    
+                    box-shadow: 8px 3px 30px;
+                    transition: 0.3s;
+                }
                  
             }
         }
