--- a/src/app/shared/components/search-result/search-result.component.scss
+++ b/src/app/shared/components/search-result/search-result.component.scss
@@ -77,6 +77,15 @@
     border: none;
     border-radius: 20px;
 
+    &:hover {
+        cursor: pointer;
+        .card-title {
+            color: #f55441;
+        }
+        box-shadow: 8px 3px 30px;
+        transition: 0.3s;
+    }
+
     .img-fluid {
         border-radius: 10px;
         border-bottom-left-radius: 0;
@@ -260,17 +269,19 @@ fa-icon {
     display: flex;
     margin-top: 20px;
     margin-bottom: 40px;
+    align-items: baseline;
 
     &__box {
         display: flex;
         flex-grow: 1;
         flex-wrap: wrap;
+        align-items: center;
     }
 
     &__filter {
         margin-right: 20px;
         position: relative;
-        margin-bottom: 15px;
+        // margin-bottom: 15px;
         &>p{
             margin-bottom: 5px;
             font-size: 14px;
@@ -321,7 +332,7 @@ fa-icon {
 
         ng-select {
             // min-width: 120px;
-            width: 250px;
+            // width: 250px;
 
             
             
@@ -333,13 +344,13 @@ fa-icon {
 
         &.priceRange {
             // min-width: 21%;
-            min-width: 180px;
+            // min-width: 180px;
             .setPriceBtn{
-                border-radius: 50px !important;
+                border-radius: 10px !important;
                 font-size: 14px;
                 box-shadow: 0 3px 6px #59595919 !important;
-                height: 55px;
-                min-width: 100%;
+                // height: 55px;
+                // min-width: 100%;
                 // width: 100%;
             }
 
@@ -398,7 +409,7 @@ fa-icon {
                 }
 
                 &.dimmed {
-                    color: #999;
+                    color: black;
                 }
             }
 
@@ -439,7 +450,7 @@ fa-icon {
     .button-success{
         height: 55px;
         border-radius: 50px;
-        position: relative;
+        // position: relative;
         top: 26px;
         width: 200px;
         @media (max-width:1300px){
@@ -451,7 +462,7 @@ fa-icon {
 ._filter::ng-deep .ng-select-container{
     border-radius: 50px !important;
     font-size: 14px;
-    height: 55px;
+    // height: 55px;
     box-shadow: 0 3px 6px #59595919;
 }
 
@@ -521,19 +532,19 @@ fa-icon {
             flex-wrap: wrap;
         }
         &__filter{
-            width: 30%;
-            margin-bottom: 15px;
+            // width: 30%;
+            // margin-bottom: 15px;
             &.city,&.area,&.neighborhood,&.estate_type,&.propose,&.rooms,&.space{
                 ._filter{
-                    max-width: none;
-                    min-width: 100%;
-                    max-width: 100%;
+                    // max-width: none;
+                    // min-width: 100%;
+                    // max-width: 100%;
                     
                 }
             }
-            &.estate_type,&.priceRange{
-                width: 46%;
-            }
+            // &.estate_type,&.priceRange{
+            //     width: 46%;
+            // }
         }
     }
 }
