--- a/src/app/shared/components/home/home.component.scss
+++ b/src/app/shared/components/home/home.component.scss
@@ -626,6 +626,12 @@
                     }
                 }
                 &.priceRange {
+                    width: 22%;
+
+                    @media (max-width: 425px) {
+                        width: 100%;
+                    }
+
                     min-width: 21%;
                     // min-width: 15%;
                     
