--- a/src/app/shared/components/search-result/search-result.component.scss
+++ b/src/app/shared/components/search-result/search-result.component.scss
@@ -1,5 +1,33 @@
+.buttons{
+    display: flex;
+    justify-content: space-between;
+    width: initial;
+    cursor: pointer;
 
+    @media (max-width: 425px) {
+        width: 100%;
+    }
 
+    .filter-button{
+        display: none;
+    
+        @media (max-width: 425px) {
+            display: flex;
+            justify-content: space-between;
+            margin: 0% 1%;
+            font-size: 14px!important;
+            height: 55px;
+            border-radius: 50px!important;
+            padding-left: 15px;
+            padding-right: 15px;
+            background: white;
+            box-shadow: 0 3px 6px #59595919;
+            width: 100%;
+            align-items: center;
+        }
+    }
+    
+}
 
 .results {
     background-color: #F7F7F7;
@@ -267,7 +295,12 @@ fa-icon {
 
 .search-filters {
     display: flex;
-    margin-top: 20px;
+    // margin-top: 20px;
+
+    @media (max-width: 425px) {
+        // margin-top: 0px;
+    }
+
     margin-bottom: 40px;
     align-items: baseline;
 
