--- a/src/app/shared/components/single-property/single-property.component.html
+++ b/src/app/shared/components/single-property/single-property.component.html
@@ -122,15 +122,17 @@
                 </div>
 
             </div>
-            <div class="row details mt-5 mb-5">
-                <div class="col-sm-12 col-lg-8">
-                    <p class="title">{{'propertyDetails.Details' | translate}}</p>
-                    <!-- <p class="desc">
-                        {{renderString(data?.description)}}
-                    </p> -->
+            <div class="row details col-lg-8 mt-5 mb-5">
+                <div class="col-sm-12">
+                    
+                    <div (click)="displayDescription()" style="display: flex; justify-content: space-between; cursor: pointer; align-items: center;">
+                        <p class="title">{{'propertyDetails.Details' | translate}}</p>
+                        <fa-icon *ngIf="descriptionDisplay === 'initial'" [icon]="faChevronUp"></fa-icon> 
+                        <fa-icon *ngIf="descriptionDisplay === 'none'" [icon]="faChevronDown"></fa-icon>       
+                    </div>
 
                     {{renderString(data?.description)}}
-                    <div class="desc" id="description"></div>
+                    <div class="desc" id="description" [ngStyle]="{'display': descriptionDisplay}"></div>
 
                 </div>
                 <div class="col-12 more-details">
