--- a/src/unit-details.scss
+++ b/src/unit-details.scss
@@ -214,8 +214,6 @@
                 }
             }
         }
-
-
         .details {
             margin-top: 20px !important;
             background-color: #fff;
@@ -225,6 +223,7 @@
                 color: #4e4e56;
                 font-size: 24px;
                 font-family: "Rubik-bold";
+                margin: 0px;
             }
             .desc {
                 color: black;
@@ -247,12 +246,16 @@
                 }
 
                 .box {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
                     max-width: 215px;
                     height: 120px;
                     border: 1px solid #a9a9a9;
                     border-radius: 10px;
                     //  text-align: center;
                     margin: auto;
+                    padding: 15px;
 
                     .icon {
                         display: inline-block;
@@ -260,8 +263,6 @@
                         height: 40px;
                         background-color: #f7f7f7;
                         border-radius: 10px;
-                        margin-top: 28px;
-                        margin-left: 13px;
                         img {
                             display: block;
                             width: 35px;
@@ -281,17 +282,19 @@
                         vertical-align: top;
                         font-family: "Rubik-medium";
                         width: 68%;
-                        padding: 10px;
+                        padding: 0px 5px;
+                        width: fit-content;
                         @media only screen and (min-width: 768px) and (max-width: 1350px) {
                             font-size: 14px;
                             // display: block;
                         }
                         .head {
+                            width: fit-content;
                             display: block;
                             font-family: "Rubik-Regular";
                             font-size: 12px;
                             color: #a9a9a9;
-                            
+                            margin: 0px;
                         }
                         .bold {
                             color: #4e4e56;
